<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="190dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="50dp"
            android:src="@drawable/icon_main" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hintUsername"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:boxStrokeColor="@color/black"
            app:boxStrokeErrorColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/transparent_background"
                android:inputType="text"
                android:paddingStart="50dp"
                android:paddingEnd="20dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- gạch dưới -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:hint="@string/hintPassword"
                app:startIconDrawable="@drawable/baseline_password_24"
                app:endIconMode="password_toggle"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/logPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent_background"
                    android:inputType="textPassword"
                    android:paddingStart="50dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <!-- gạch dưới -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/create_acc"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="@color/click_link"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/forgot_pass"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/resetPassBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass_link"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="@color/click_link"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:alpha="0.9"
        android:text="@string/login"
        app:icon="@drawable/baseline_login_24"
        app:iconGravity="textStart"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="bottom"
        android:background="@drawable/btn_background"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>