<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/signup_title"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hintUsername"
            app:boxStrokeColor="@color/black"
            app:boxStrokeErrorColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_user_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/transparent_background"
                android:inputType="text"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- gạch dưới -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/FirstNameTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/signup_firstName"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/transparent_background"
                    android:inputType="text"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:maxLines="1"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LastNameTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:hint="@string/signup_lastName"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userLastname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/transparent_background"
                    android:inputType="text"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:maxLines="1"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/signup_email"
            app:boxStrokeColor="@color/black"
            app:boxStrokeErrorColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/transparent_background"
                android:inputType="text"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- gạch dưới -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/UniTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/signup_Uname"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userUniversity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/transparent_background"
                    android:inputType="text"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:maxLines="1"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/yearTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:layout_marginTop="10dp"
                android:hint="@string/signup_year"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userYear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/transparent_background"
                    android:inputType="text"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:maxLines="1"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/genderTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                app:endIconMode="dropdown_menu"
                android:hint="@string/signup_gender"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="@color/black">

                <AutoCompleteTextView
                    android:id="@+id/genderAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent_background"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:completionThreshold="1"
                    android:popupBackground="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/BirthdayTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_marginTop="10dp"
                android:hint="@string/signup_birth"
                app:endIconDrawable="@drawable/baseline_edit_calendar_24"
                app:endIconMode="custom"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="@color/black">

                <EditText
                    android:id="@+id/userBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/transparent_background"
                    android:inputType="none"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:maxLines="1"
                    android:focusable="false"
                    android:onClick="showDatePickerDialog" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:hint="@string/hintPassword"
                app:endIconMode="password_toggle"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/logPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent_background"
                    android:inputType="textPassword"
                    android:paddingEnd="20dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <!-- gạch dưới -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reEnterPassTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_rePassword"
                app:endIconMode="password_toggle"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reEnterPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent_background"
                    android:inputType="textPassword"
                    android:paddingEnd="20dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <!-- gạch dưới -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/return_login"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="@color/click_link"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:alpha="0.9"
        android:text="@string/signup"
        app:icon="@drawable/baseline_login_24"
        app:iconGravity="textStart"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="bottom"
        android:background="@drawable/btn_background"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>